K8S ConfigMaps & Secrets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: abi/python-sample-demo-app:v1
        volumeMounts:
          - name: db-connection
            mountPath: /opt
       # env:
          # - name: DB-PORT
          #  valueFrom: 
          #   configMapKeyRef:
          #     name: demo-cm
          #     key: db-port
        ports:
        - containerPort: 8000
      volumes:
        - name: db-connection
          configMap:
            name: demo-cm
